--- a/Asset Spec/sdg.unturned.masterbundleconfig, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.masterbundleconfig, assembly-csharp.json
@@ -21,8 +21,7 @@
             "Type": "Path",
             "Required": true,
             "Description": "Defines the path in Unity to the master bundle's folder.",
-            "Variable": "assetPrefix",
-            "Priority": 1
+            "Variable": "assetPrefix"
         },
         {
             "Key": "Master_Bundle_Version",
