--- a/Asset Spec/sdg.unturned.itemchargeasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itemchargeasset, assembly-csharp.json
@@ -15,8 +15,7 @@
             "Description": "Radius of the damaging, area-of-effect explosion. Not to be confused with @(SDG.Unturned.ItemPlaceableAsset, Assembly-CSharp::Range) which is placement range.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "range2",
-            "DefaultValue": 0,
-            "Priority": 3
+            "DefaultValue": 0
         },
         {
             "Key": "Player_Damage",
@@ -24,8 +23,7 @@
             "Description": "Damage dealt to players caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "playerDamage",
-            "DefaultValue": 0,
-            "Priority": 2
+            "DefaultValue": 0
         },
         {
             "Key": "Zombie_Damage",
@@ -33,8 +31,7 @@
             "Description": "Damage dealt to zombies caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "zombieDamage",
-            "DefaultValue": 0,
-            "Priority": 2
+            "DefaultValue": 0
         },
         {
             "Key": "Animal_Damage",
@@ -42,8 +39,7 @@
             "Description": "Damage dealt to animals caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "animalDamage",
-            "DefaultValue": 0,
-            "Priority": 2
+            "DefaultValue": 0
         },
         {
             "Key": "Barricade_Damage",
@@ -51,8 +47,7 @@
             "Description": "Damage dealt to barricades caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "barricadeDamage",
-            "DefaultValue": 0,
-            "Priority": 2
+            "DefaultValue": 0
         },
         {
             "Key": "Structure_Damage",
@@ -60,8 +55,7 @@
             "Description": "Damage dealt to structures caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "structureDamage",
-            "DefaultValue": 0,
-            "Priority": 2
+            "DefaultValue": 0
         },
         {
             "Key": "Vehicle_Damage",
@@ -69,8 +63,7 @@
             "Description": "Damage dealt to vehicles caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "vehicleDamage",
-            "DefaultValue": 0,
-            "Priority": 2
+            "DefaultValue": 0
         },
         {
             "Key": "Resource_Damage",
@@ -78,8 +71,7 @@
             "Description": "Damage dealt to resources caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "resourceDamage",
-            "DefaultValue": 0,
-            "Priority": 2
+            "DefaultValue": 0
         },
         {
             "Key": "Explosion_Launch_Speed",
@@ -87,8 +79,7 @@
             "Description": "Damage dealt to resources caught within the area-of-effect explosion.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "explosionLaunchSpeed",
-            "DefaultValue": "=MUL(@Player_Damage 0.1)",
-            "Priority": 2
+            "DefaultValue": "=MUL(@Player_Damage 0.1)"
         },
         {
             "Key": "Object_Damage",
@@ -97,8 +88,7 @@
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "objectDamage",
             "DefaultValue": "@Resource_Damage",
-            "IncludedDefaultValue": 0,
-            "Priority": 2
+            "IncludedDefaultValue": 0
         },
         {
             "Key": "Explosion2",
@@ -110,8 +100,7 @@
             "Description": "Effect to play upon detonation.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/charge-asset.html#charge-asset-properties",
             "Variable": "DetonationEffectGuid",
-            "DefaultValue": "00000000-0000-0000-0000-000000000000",
-            "Priority": 3
+            "DefaultValue": "00000000-0000-0000-0000-000000000000"
         }
     ]
 }
