--- a/Asset Spec/sdg.unturned.itemmeleeasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itemmeleeasset, assembly-csharp.json
@@ -19,8 +19,7 @@
             "Description": "The sound played when this melee weapon is used.",
             "DefaultValue": null,
             "Variable": "use",
-            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 4
+            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties"
         },
         {
             "Key": "Strength",
@@ -28,7 +27,6 @@
             "DefaultValue": 0.0,
             "Description": "Multiplier on the damage dealt by strong attacks.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 10,
             "Variable": "strength",
             "ExclusiveWith": [ "Repeated" ]
         },
@@ -40,7 +38,6 @@
             "Maximum": 1,
             "Description": "Percentage (0-1) of the way through the \"Weak\" animation to apply damage.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 10,
             "Variable": "weak"
         },
         {
@@ -51,7 +48,6 @@
             "Maximum": 1,
             "Description": "Percentage (0-1) of the way through the \"Strong\" animation to apply damage.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 10,
             "Variable": "strong",
             "ExclusiveWith": [ "Repeated" ]
         },
@@ -63,7 +59,6 @@
             "Maximum": 100,
             "Description": "Amount of stamina depleted with each attack.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 9,
             "Variable": "stamina"
         },
         {
@@ -72,7 +67,6 @@
             "DefaultValue": false,
             "Description": "This melee item repairs barricades, structures, and vehicles.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 8,
             "Variable": "isRepair"
         },
         {
@@ -81,7 +75,6 @@
             "DefaultValue": false,
             "Description": "This melee item's weak attack repeates while the player continues holding down their primary key. Strong attacks are disabled.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 8,
             "Variable": "isRepeated"
         },
         {
@@ -90,7 +83,6 @@
             "DefaultValue": false,
             "Description": "This melee item has a light that can be toggled using the player's tactical key.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 7,
             "Variable": "isLight"
         },
         {
@@ -99,7 +91,6 @@
             "DefaultValue": true,
             "Description": "Whether or not this flashlight emits light when enabled.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/data/struct/playerspotlightconfig.html#spotlight-enabled-bool-true",
-            "Priority": 6,
             "Variable": "lightConfig",
             "InclusiveWith": [ "Light" ]
         },
@@ -109,7 +100,6 @@
             "DefaultValue": 64.0,
             "Description": "Range of the flashlight's beam, measured in meters.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/data/struct/playerspotlightconfig.html#spotlight-range-float32-64",
-            "Priority": 6,
             "Variable": "lightConfig",
             "InclusiveWith": [ "Light" ]
         },
@@ -121,7 +111,6 @@
             "Maximum": 360.0,
             "Description": "Angle of the flashlight's beam, measured in degrees.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/data/struct/playerspotlightconfig.html#spotlight-angle-float32-90",
-            "Priority": 6,
             "Variable": "lightConfig",
             "InclusiveWith": [ "Light" ]
         },
@@ -132,7 +121,6 @@
             "MinimumExclusive": 0.0,
             "Description": "Intensity of the flashlight's beam.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/data/struct/playerspotlightconfig.html#spotlight-intensity-float32-1-3",
-            "Priority": 6,
             "Variable": "lightConfig",
             "InclusiveWith": [ "Light" ]
         },
@@ -147,7 +135,6 @@
             "DefaultValue": "f5df93",
             "Description": "Color of the flashlight's beam.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/data/struct/playerspotlightconfig.html#spotlight-color-color-f5df93",
-            "Priority": 6,
             "Variable": "lightConfig",
             "InclusiveWith": [ "Light" ]
         },
@@ -159,7 +146,6 @@
             "IncludedDefaultValue": 0,
             "Description": "The radius where zombies and animals should be alerted when attacking, measured in meters.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 5,
             "Variable": "alertRadius"
         },
         {
@@ -168,8 +154,7 @@
             "DefaultValue": null,
             "Description": "Audio to play upon impact.",
             "Variable": "impactAudio",
-            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties",
-            "Priority": 4
+            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#melee-asset-properties"
         },
         {
             "Key": "Weak_Attack_Quest_Rewards",
@@ -184,8 +169,7 @@
             "Description": "Rewards applied when the player performs a weak attack.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#npc-rewards",
             "Variable": "weakAttackQuestRewards",
-            "CountForTemplateGroup": "melee-weak-rewards",
-            "Priority": 3
+            "CountForTemplateGroup": "melee-weak-rewards"
         },
         {
             "Key": "Strong_Attack_Quest_Rewards",
@@ -200,8 +184,7 @@
             "Description": "Rewards applied when the player performs a strong attack.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/melee-asset.html#npc-rewards",
             "Variable": "strongAttackQuestRewards",
-            "CountForTemplateGroup": "melee-strong-rewards",
-            "Priority": 3
+            "CountForTemplateGroup": "melee-strong-rewards"
         }
     ],
     "BundleAssets":
